# printf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  author  main.c  results.txt
includes/: ft_handlers.h  ft_printf.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_iswspace.c  ft_itoa.c  ft_itoabase.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memchrat.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrealloc.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strat.c  ft_strcat.c  (+29 more)
pft-master-polniy/: CMakeLists.txt  history.csv  test
pft-master-polniy/test.dSYM/Contents/Resources/DWARF/: test
src/: ft_get_params.c  ft_printf.c  ft_printf.h  get_params.c  printf.c
src/handlers/: ft_handle_chr.c  ft_handle_int.c  ft_handle_nul.c  ft_handle_oct.c  ft_handle_ptr.c  ft_handle_str.c  ft_handle_uns.c  ft_handlers.h  handle_chr.c  handle_flt.c  handle_hex.c  handle_int.c  handle_nul.c  handle_oct.c  handle_ptr.c  handle_str.c  handle_uns.c
src/handlers/floats/: ft_handle_flt.c  handle_flt.c
src/handlers/floats/bigint/: BigInt.h  BigIntArithmetics.c  BigIntHelper.c  BigIntOperatoins.c  BigIntPrint.c  big_int.h  big_int_arithmetics.c  big_int_helper.c  big_int_operatoins.c  big_int_print.c
src/handlers/floats/doubleunpacked/: DoubleUnpacked.h  PrintDoubleUnpacked.c  double_unpacked.h  print_double_unpacked.c
src/handlers/floats/printdouble/: PrintDouble.c  PrintDouble.h  print_double.c  print_double.h
src/handlers/floats/str/: str.c  str.h
src/handlers/floats/unpackdouble/: .double_representation.h.swp  DoubleClassifier.h  DoubleClassifier1.c  DoubleClassifier2.c  DoubleClassifier3.c  DoubleRepresentation.c  DoubleRepresentation.h  UnpackDouble.h  UnpackDouble1.c  UnpackDouble2.c  double_classifier.h  double_classifier1.c  double_classifier3.c  double_representation.c  double_representation.h  unpack_double.h  unpack_double1.c  unpack_double2.c
src/handlers/floats/utils/: Utils.h  utils.c  utils.h
src/utils/: ft_util_handle.c  ft_util_hexpref.c  ft_util_print.c  ft_util_rigor.c  ft_util_sign.c  ft_util_size.c  ft_util_width.c  util_hexpref.c  util_print.c  util_rigor.c  util_sign.c  util_size.c  util_width.c
