cmake_minimum_required(VERSION 3.14)
project(printf C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)
include_directories(src/handlers/floats/bigint)
include_directories(src/handlers/floats/doubleunpacked)
include_directories(src/handlers/floats/printdouble)
include_directories(src/handlers/floats/str)
include_directories(src/handlers/floats/unpackdouble)
include_directories(src/handlers/floats/utils)

add_executable(printf
        includes/ft_handlers.h
        includes/ft_printf.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_isupper.c
        libft/ft_iswspace.c
        libft/ft_itoa.c
        libft/ft_itoabase.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memchrat.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memrealloc.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strat.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/libft.h
        src/handlers/floats/bigint/big_int.h
        src/handlers/floats/bigint/big_int_arithmetics.c
        src/handlers/floats/bigint/big_int_helper.c
        src/handlers/floats/bigint/big_int_operatoins.c
        src/handlers/floats/bigint/big_int_print.c
        src/handlers/floats/doubleunpacked/double_unpacked.h
        src/handlers/floats/doubleunpacked/print_double_unpacked.c
        src/handlers/floats/printdouble/print_double.c
        src/handlers/floats/printdouble/print_double.h
        src/handlers/floats/str/str.c
        src/handlers/floats/str/str.h
        src/handlers/floats/unpackdouble/double_classifier.h
        src/handlers/floats/unpackdouble/double_classifier1.c
        src/handlers/floats/unpackdouble/double_classifier3.c
        src/handlers/floats/unpackdouble/double_representation.c
        src/handlers/floats/unpackdouble/double_representation.h
        src/handlers/floats/unpackdouble/unpack_double.h
        src/handlers/floats/unpackdouble/unpack_double1.c
        src/handlers/floats/unpackdouble/unpack_double2.c
        src/handlers/floats/utils/utils.c
        src/handlers/floats/utils/utils.h
        src/handlers/floats/ft_handle_flt.c
        src/handlers/ft_handle_chr.c
        src/handlers/ft_handle_hex.c
        src/handlers/ft_handle_int.c
        src/handlers/ft_handle_nul.c
        src/handlers/ft_handle_oct.c
        src/handlers/ft_handle_ptr.c
        src/handlers/ft_handle_str.c
        src/handlers/ft_handle_uns.c
        src/utils/ft_util_handle.c
        src/utils/ft_util_hexpref.c
        src/utils/ft_util_print.c
        src/utils/ft_util_rigor.c
        src/utils/ft_util_sign.c
        src/utils/ft_util_size.c
        src/utils/ft_util_width.c
        src/ft_get_params.c
        src/ft_printf.c
        main.c)
